# HMS

./: CMakeLists.txt  admin.cpp  admin.h  admin.ui  adminportal.cpp  adminportal.h  adminportal.ui  doctor.cpp  doctor.h  doctor.ui  doctordetail.cpp  doctordetail.h  doctordetail.ui  main.cpp  myDb.db  patient.cpp  patient.h  patientdetail.cpp  patientdetail.h  patientdetail.ui  receptionist.cpp  receptionist.h  receptionist.ui  receptionistdetail.cpp  receptionistdetail.h  receptionistdetail.ui  resource.qrc  welcome.cpp  welcome.h  welcome.ui
